// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test a double click edit of the Label control 1`] = `
<Label
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={true}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text="A"
  useedit={false}
  visible={true}
  width=""
>
  <span
    className="ui-label label normal"
    contentEditable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    suppressContentEditableWarning={true}
  >
    A
  </span>
</Label>
`;

exports[`Test creation of a Label control 1`] = `
<span
  className="ui-label label normal test-class"
  contentEditable={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  suppressContentEditableWarning={true}
>
  Test label text
</span>
`;

exports[`Test double click change to Label and blur to save 1`] = `
<Label
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={true}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text="A"
  useedit={false}
  visible={true}
  width=""
>
  <span
    className="ui-label label normal"
    contentEditable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    suppressContentEditableWarning={true}
  >
    A
  </span>
</Label>
`;

exports[`Test making the Label control invisible 1`] = `
<Label
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text="Test label text"
  useedit={false}
  visible={false}
  width=""
>
  <span
    className="ui-label label normal invisible"
    contentEditable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    suppressContentEditableWarning={true}
  >
    Test label text
  </span>
</Label>
`;

exports[`Test retrieval of default Label props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onUpdate": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "text": " ",
  "useedit": false,
  "visible": true,
  "width": "",
}
`;

exports[`Test the disabling of the Label control 1`] = `
<Label
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onUpdate={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  text="Test label text"
  useedit={false}
  visible={true}
  width=""
>
  <span
    className="ui-label label normal disabled nohover"
    contentEditable={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    suppressContentEditableWarning={true}
  >
    Test label text
  </span>
</Label>
`;
